[package]
name = "fast-record"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
arrow = {version = "15.0.0", default-feature = false, features = ["csv", "ipc"]}
rayon = "1.5.1"
